fix footer and header covering in mobile device

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1,5 +1,7 @@
-
+body {
+    margin-bottom: 10rem;
+    margin-top:5rem;
+}
 .brightHover:hover {
   color:white !important;
 }
-
